--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         measurementId: "G-9Y1K92M54W",
       };
       firebase.initializeApp(config);
+	  firebase.messaging().usePublicVapidKey("BMx7ESdMs-CIRkqPuVm6opcEhakmUVtj0viffts2bmXonRMbHYg7MaAe2Toocq1x-B__c9VwdUMG_xdn5QWS0-A");
       var listTokenBrowser = [];
 
       const tokenBrowser = firebase.firestore().collection("tokenBrowser");
